Deploying on Render

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ databases:
     plan: free
     databaseName: gamegeek_4pqw
     user: gamegeek_4pqw_user
-    hostname: dpg-cnqbfg4f7o1s73fmrkq0-a
-    port: 5432
+    credentials:
+      hostname: dpg-cnqbfg4f7o1s73fmrkq0-a
+      port: 5432
 
 services:
   - type: web
