--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
     buildCommand: "./build.sh"
     startCommand: "python -m uvicorn GameGeek.asgi:application"
     envVars:
-      - key: postgres://gamegeek_4pqw_user:BRk9et2gBcBgYuibwmoUbhMvb79558KS@dpg-cnqbfg4f7o1s73fmrkq0-a.oregon-postgres.render.com/gamegeek_4pqw
+      - key: postgres://gamegeek_4pqw_user:BRk9et2gBcBgYuibwmoUbhMvb79558KS@dpg-cnqbfg4f7o1s73fmrkq0-a/gamegeek_4pqw
         fromDatabase:
           name: dpg-cnqbfg4f7o1s73fmrkq0-a
           property: connectionString
